# server/RealtimeController.cs
@@ -1,6 +1,11 @@
+using System.Collections.Concurrent;
+using System.ComponentModel.DataAnnotations;
+using System.Security.Claims;
 using System.Text.Json;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.EntityFrameworkCore;
+using StackExchange.Redis;
 using StateleSSE.AspNetCore;
 
 namespace server;
@@ -9,7 +14,8 @@ namespace server;
 [Route("api/realtime")]
 public class RealtimeController(
     AppDbContext dbContext,
-    ISseBackplane backplane
+    ISseBackplane backplane,
+    IConnectionMultiplexer connectionMultiplexer
 ) : BaseController
 {
     /* -------------------- CONNECT -------------------- */
@@ -32,6 +38,17 @@ public class RealtimeController(
                 PropertyNamingPolicy = JsonNamingPolicy.CamelCase
             })
         );
+        
+        var userId = CurrentUserId;
+
+        if (!string.IsNullOrEmpty(userId))
+        {
+            var redis = connectionMultiplexer.GetDatabase();
+            await redis.StringSetAsync(
+                $"connection:{connection.ConnectionId}",
+                userId
+            );
+        }
 
         await foreach (var evt in connection.ReadAllAsync(HttpContext.RequestAborted))
         {
@@ -43,19 +60,34 @@ public class RealtimeController(
     }
 
     /* -------------------- JOIN ROOM -------------------- */
+    
+    private static readonly ConcurrentDictionary<string, string> OnlineUsers = new();
 
+    [Authorize]
     [HttpPost("join")]
-    [Produces<JoinGroupResponse>]
-    public async Task Join([FromBody] JoinGroupRequest request)
+    [ProducesResponseType(typeof(JoinGroupBroadcast), 202)]
+    [ProducesResponseType(typeof(JoinGroupResponse), 200)]
+    [ProducesResponseType(typeof(UserLeftResponseDto), 400)]
+    public async Task<JoinGroupResponse> JoinGroup([FromBody] JoinGroupRequest request)
     {
+        var userId = User.FindFirstValue(ClaimTypes.NameIdentifier);
+        var u =  await dbContext.Users.FirstOrDefaultAsync(u => u.UserId == userId);
+        var room = await dbContext.ChatRooms.FirstOrDefaultAsync(r => r.Id == request.Group) ??
+                   throw new ValidationException("Room does not exist");
+        var name = u?.Username ?? "Anonymous";
+        await backplane.Groups.AddToGroupAsync("nickname/"+request.ConnectionId, name);
         await backplane.Groups.AddToGroupAsync(request.ConnectionId, request.Group);
-
         var members = await backplane.Groups.GetMembersAsync(request.Group);
-
-        await backplane.Clients.SendToGroupAsync(request.Group,  new JoinGroupResponse()
+        var list = new List<ConnectionIdAndUserName>();
+        foreach (var m in members)
         {
-            Members = members.ToList()
-        });
+            var nickname = await backplane.Groups.GetClientGroupsAsync("nickname/" + m);
+            list.Add(new ConnectionIdAndUserName(m, nickname.FirstOrDefault() ?? "Anonymous"));
+        }
+        await backplane.Clients.SendToGroupAsync(request.Group, new JoinGroupBroadcast(list));
+        
+        return new JoinGroupResponse(room);
+
     }
 
     [HttpPost("createroom")]
@@ -75,20 +107,56 @@ public class RealtimeController(
         return chatRoom;
     }
 
+    [HttpGet("getmembers")]
+    public async Task<List<User>> GetGroupMembers(string groupId)
+    {
+        return await dbContext.UserChatRooms
+            .Where(uc => uc.ChatRoomId == groupId)
+            .Select(uc => uc.User)
+            .ToListAsync();
+    }
+
+    [HttpPost("getonlinemembers")]
+    public async Task<List<User>> GetOnlineGroupMembers(string groupId)
+    {
+        var connectionIds = await backplane.Groups.GetMembersAsync(groupId);
+
+        var redis = connectionMultiplexer.GetDatabase();
+
+        var userIds = new List<string>();
+
+        foreach (var connectionId in connectionIds)
+        {
+            var userId = await redis.StringGetAsync($"connection:{connectionId}");
+            if (!userId.IsNullOrEmpty)
+                userIds.Add(userId!);
+        }
+
+        return await dbContext.Users
+            .Where(u => userIds.Contains(u.UserId))
+            .ToListAsync();
+    }
+    
+    [HttpGet(nameof(GetRooms))]
+    public async Task<List<ChatRoom>> GetRooms()
+        => await dbContext.ChatRooms.ToListAsync();
+    
     /* -------------------- SEND MESSAGE -------------------- */
 
-    //[Authorize]
+    [Authorize]
     [HttpPost("send")]
     [Produces<MessageResponseDto>]
     public async Task Send([FromBody] SendGroupMessageRequestDto request)
     {
         var userId = CurrentUserId!;
         
+        var user = await dbContext.Users.FirstOrDefaultAsync(u => u.UserId == userId);
+        
         var msg = new Message
         {
             Id = Guid.NewGuid().ToString(),
             Content = request.Message,
-            UserId = "6f2e8c6d-f5e9-4ef2-a8e0-fed23a85f9e7",
+            UserId = userId,
             ChatRoomId = request.GroupId,
             CreatedAt = DateTime.UtcNow
         };
@@ -96,21 +164,23 @@ public class RealtimeController(
         dbContext.Messages.Add(msg);
         await dbContext.SaveChangesAsync();
 
-        await backplane.Clients.SendToGroupAsync("randomroom", new MessageResponseDto
+        await backplane.Clients.SendToGroupAsync(request.GroupId, new MessageResponseDto
         {
-            User = "6f2e8c6d-f5e9-4ef2-a8e0-fed23a85f9e7",
+            User = user!.Username,
             Message = request.Message
         });
     }
-
-    /* -------------------- LEAVE ROOM -------------------- */
-
-    [HttpPost("leave")]
-    public async Task Leave([FromBody] JoinGroupRequest request)
+    
+    [Authorize]
+    [HttpPost("poke")]
+    [ProducesResponseType(typeof(PokeResponseDto), 200)]
+    public async Task Poke(PokeRequestDto dto)
     {
-        await backplane.Groups.RemoveFromGroupAsync(request.ConnectionId, request.Group);
+        var userId = CurrentUserId!;
+        var u = await dbContext.Users.FirstOrDefaultAsync(u => u.UserId == userId);
+        var name = u!.Username ?? "Anonymous";
 
-        await backplane.Clients.SendToGroupAsync(request.Group,  new JoinGroupResponse());
+        await backplane.Clients.SendToClientAsync(dto.connectionIdToPoke, new PokeResponseDto(name));
     }
 }
 
@@ -119,18 +189,16 @@ public record ConnectionResponse(string ConnectionId) : BaseResponseDto;
 
 public record JoinGroupRequest(string ConnectionId, string Group);
 
+public record PokeResponseDto(string pokedBy) : BaseResponseDto;
+public record PokeRequestDto(string connectionIdToPoke);
+
 public record SendGroupMessageRequestDto
 {
     public string Message { get; set; } = "";
     public string GroupId { get; set; } = "";
 }
 
-public record JoinGroupResponse : BaseResponseDto
-{
-    public List<string> Members { get; set; }
-}
-
-
+public record JoinGroupResponse(ChatRoom chatroom) : BaseResponseDto;
 
 public record MessageResponseDto : BaseResponseDto
 {
@@ -138,5 +206,6 @@ public record MessageResponseDto : BaseResponseDto
     public string? User { get; set; } = "";
 }
 
-public record LoginRequest(string Username, string Password);
-public record LoginResponse(string Token);
+public record JoinGroupBroadcast(List<ConnectionIdAndUserName> ConnectedUsers) : BaseResponseDto;
+
+public record ConnectionIdAndUserName(string ConnectionId, string UserName);
